--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>Hobi : Main Game , Jajan , nonton Youtube , Nyanyi </body>
 	<p></p>
 <body>Deskripsi : Pelajar di SMK-SMAK BOGOR</body>
-<img src="syabick hobby.png" width="400">
+<img src="syabick hobby.jpg" width="400">
 <img src="idola syabick.jpg" width="400">
 <img src=" syabick gimp.gif" width="400">
 
