--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title> PROFILE SYABICK VALENTINO SYAKUR </title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<h1>Profile Syabick Valentino Syakur <strong></strong></h1>
