--- a/index.html
+++ b/index.html
@@ -19,8 +19,13 @@
 <img src="idola syabick.jpg" width="400">
 <img src=" syabick gimp.gif" width="400">
 
+idolaku adalah judika karena dia menginspirasiku dengan nyanyian nya yang sangat indah
+lalu hobbyku adalah bernyanyi , karena bernyanyi bisa membuat ku senang dan nyaman 
+,disaat aku menyanyi aku merasa bangga hehehe
+terimakasih 
 
 
+<a href="index.html"><img src="panah.jpg" width="50"></a>
 </body>
 	<a align="left" href="index2.html">NEXT</a>
 </html>
